# OmegaFold

./: .gitignore  MANIFEST.in  README.md  environment.yml  main.py  pipeline.py  setup.cfg
omegafold/: __main__.py  pipeline.py
scripts/: download_weights.sh
