[metadata]
name = omegafold
version = 1.0.0
url = https://github.com/seoklab/OmegaFold
description = High-resolution de novo Structure Prediction from Primary Sequence
author = seoklab
author_email = compbio.galaxy@gmail.com

[options]
python_requires = >=3.10
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
	omegafold = omegafold.main:main

[flake8]
max-line-length = 79
ignore = E266,E4,E74,F403,F405,W503
per-file-ignores =
	# imported but unused
	__init__.py: F401
extend-exclude = .github/**,build/**,dist/**,db/**,*.pyc
