[metadata]
name = omegafold
version = 1.1.0
url = https://github.com/seoklab/OmegaFold
description = High-resolution de novo Structure Prediction from Primary Sequence
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = seoklab
author_email = compbio.galaxy@gmail.com

[options]
python_requires = >=3.8
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
	omegafold = omegafold.__main__:main

[flake8]
max-line-length = 79
ignore = E266,E4,E74,F403,F405,W503
per-file-ignores =
	# imported but unused
	__init__.py: F401
extend-exclude = .github/**,build/**,dist/**,db/**,*.pyc
